resources/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: finances
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  minReadySeconds: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      name: api
      namespace: finances
      labels:
        app: api
    spec:
      restartPolicy: Always
      containers:
        - name: api
          image: ${IMAGE_URL}
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 3333
              protocol: TCP
