resources/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: finances
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3333
      name: api
