resources/kubernetes/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: finances
  annotations:
    nginx.org/client-max-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: finances.vagner-cardoso.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
